# libtide

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
include/tide/: sentry.hpp  trace.hpp
test/: meson.build  sentry_test.cpp  trace_ostream_test.cpp  trace_prefix_test.cpp  trace_test.cpp
